[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "All the basics data structures with example and explanation."
authors = ["Ashraful Islam <ashrafulrobin3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
